# marcha

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_error.txt  build_native.bat  build_output.txt  pubspec.yaml  test_kill_processes.ps1  test_kill_processes_v2.ps1  test_native.cpp  tmpclaude-e495-cwd  tmpclaude-f597-cwd
dashboard/: index.html
docs/: index.html  marcha_config_standard.md  script.js  styles.css
lib/: app.dart  main.dart  tmpclaude-c261-cwd
lib/core/: api_extension.dart  core.dart  eip191_verifier.dart  history_extension.dart  layout_extension.dart  logs_extension.dart  resource_monitor_extension.dart  settings_extension.dart  tasks_extension.dart  templates_extension.dart
lib/models/: app_settings.dart  history_entry.dart  layout_node.dart  layout_preset.dart  layout_presets.dart  layout_sizes.dart  process_stats.dart  quick_action.dart  slot_assignment.dart  task.dart  task_group.dart  task_step.dart  template.dart  terminal_log.dart  ui_sizes.dart
lib/screens/: api_screen.dart  process_manager_screen.dart  quick_action_edit_dialog.dart  quick_actions_manage_dialog.dart  resources_screen.dart  settings_screen.dart  task_group_edit_screen.dart  template_edit_screen.dart
native/windows/: CMakeLists.txt  marcha_native.exp  marcha_native.lib  process_manager.cpp  process_manager.h  startup_manager.cpp  startup_manager.h  test_conpty_tree.cpp  test_kill.cpp  test_kill_dll.cpp  test_kill_final.cpp  virtual_desktop_manager.cpp  virtual_desktop_manager.h
pane_research/: README.md  pubspec.yaml
test/: widget_test.dart
windows/: CMakeLists.txt
(+30 files in other folders)
